--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -6,7 +6,7 @@
   height: 60vh;
   width: 100%;
   margin-top: 7px;
-  background-image: url("https://www.myglobalviewpoint.com/wp-content/uploads/2019/12/Most-Beautiful-Cities-in-Europe-to-Visit-in-2020.jpg");
+  background-image: url("./images/Monuments.jpeg");
 }
 
 .text {
