--- a/client/src/components/blog.css
+++ b/client/src/components/blog.css
@@ -58,7 +58,7 @@
   flex: 1;
   height: 132%;
   width: auto;
-  background-image: url("https://cdn.vox-cdn.com/thumbor/iF8iwZ_ArRjFl0YUgo_So6BnVWA=/0x0:500x333/1200x0/filters:focal(0x0:500x333):no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/15947328/JTP_3926.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-left: 10px;
   margin-right: 10px;
@@ -71,7 +71,7 @@
   flex: 1;
   height: 100%;
   width: auto;
-  background-image: url("https://cdn.vox-cdn.com/thumbor/5Wr2vfJ0tPJ4Xod66KwkpDrzTPc=/0x0:920x613/1200x800/filters:focal(387x234:533x380)/cdn.vox-cdn.com/uploads/chorus_image/image/63203796/JTP_3922.0.0.0.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-left: 10px;
   margin-right: 10px;
@@ -83,7 +83,7 @@
   flex: 1;
   height: 133%;
   width: auto;
-  background-image: url("https://cdn.vox-cdn.com/thumbor/5Wr2vfJ0tPJ4Xod66KwkpDrzTPc=/0x0:920x613/1200x800/filters:focal(387x234:533x380)/cdn.vox-cdn.com/uploads/chorus_image/image/63203796/JTP_3922.0.0.0.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-left: 10px;
   margin-right: 10px;
@@ -96,7 +96,7 @@
   flex: 1;
   height: 78%;
   width: auto;
-  background-image: url("https://cdn.thecoolist.com/wp-content/uploads/2016/12/Bruges-Belgium-beautiful-city.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-right: 10px;
   border-radius: 10px;
@@ -109,7 +109,7 @@
   height: 84%;
   width: auto;
   transition: 1s ease-in-out;
-  background-image: url("https://www.thewowstyle.com/wp-content/uploads/2015/01/most-beautiful-cities-41.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-right: 10px;
   margin-left: 10px;
@@ -123,7 +123,7 @@
   height: 113%;
   width: auto;
   transition: 1s ease-in-out;
-  background-image: url("https://www.thewowstyle.com/wp-content/uploads/2015/01/most-beautiful-cities-41.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-right: 10px;
   margin-left: 10px;
@@ -172,7 +172,7 @@
   flex: 1;
   height: 150%;
   width: auto;
-  background-image: url("https://wallpaperaccess.com/full/184241.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-right: 10px;
   border-radius: 10px;
@@ -183,7 +183,7 @@
   flex: 1;
   height: 150%;
   width: auto;
-  background-image: url("https://www.easemytrip.com/travel/img/world-beautiful-cities.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-right: 10px;
   border-radius: 10px;
@@ -194,7 +194,7 @@
   flex: 1;
   height: 168%;
   width: auto;
-  background-image: url("https://wallpaperaccess.com/full/184241.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-right: 10px;
   border-radius: 10px;
@@ -206,7 +206,7 @@
   flex: 1;
   height: 174%;
   width: auto;
-  background-image: url("https://www.easemytrip.com/travel/img/world-beautiful-cities.jpg");
+  background-image: url("https://images.app.goo.gl/uG5KS9gMrENRPNpZ6");
   background-size: cover;
   margin-right: 10px;
   border-radius: 10px;
