--- a/client/src/components/destination.css
+++ b/client/src/components/destination.css
@@ -14,7 +14,7 @@
   flex: 1;
   height: 60vh;
   width: 100%;
-  background-image: url("http://www.studentuniverse.com/blog/wp-content/uploads/2014/04/Santorini-Greece.jpg");
+  background-image: url("./images/123.jpg");
   background-size: cover;
   border-radius: 10px;
   margin-right: 5px;
