--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+.image-header
+{
+  max-width: 100%;
+  height: auto;
+  background-color: black;
+  
+}
+.egypt-image 
+{
+  width: 100%;
+}
