--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 header{
-  background-color: rgb(201, 169, 43);
+  background-color:cornflowerblue ;
   padding:1rem ;
 
 }
@@ -30,5 +30,53 @@ header a {
 .monuments img{
   width:100%;
   max-width: 400px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  
+  
 } 
 
+.monuments-info
+{
+  padding: 1rem;
+}
+.image-header
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  max-width: 100%;
+  height: auto;
+}  
+ 
+.image-header:hover{
+
+  transform: scaleX(-1);
+} 
+.images {  
+
+  padding: 5rem 2rem;
+  background-color: var(--light-primary-color );
+  text-align: center;
+
+} 
+.image 
+{
+  width: 15vw;
+  background-color:lightslategray;
+  margin: 1rem .5rem;
+  display: inline-block;
+  transition: .2s;
+  border-radius: .3rem;
+} 
+.egypt-image 
+{
+  width: 100%;
+  border-radius: .3rem ;
+} 
+.image-text
+{
+  padding: 2rem ;
+}
