--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
-body {
+body
+{
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,34 +8,34 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header{
+header
+{
   background-color:cornflowerblue ;
   padding:1rem ;
-
 }
 
-header a {
+header a 
+{
   color: #fff;
   font-weight: bold;
   text-decoration: none;
 }
-.monuments{
+.monuments
+{
   display: flex;
   flex-wrap: wrap;
   justify-content:center;
   border:1px #bca741 solid;
   margin:1rem;
-
 }
 
-.monuments img{
+.monuments img 
+{
   width:100%;
   max-width: 400px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding: 5px;
-  
-  
+  padding: 5px; 
 } 
 
 .monuments-info
@@ -51,16 +52,15 @@ header a {
   height: auto;
 }  
  
-.image-header:hover{
-
+.image-header:hover
+{
   transform: scaleX(-1);
 } 
-.images {  
-
+.images
+{  
   padding: 5rem 2rem;
   background-color: var(--light-primary-color );
   text-align: center;
-
 } 
 .image 
 {
