--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,11 +6,12 @@ body
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightsteelblue;
 }
 
 header
 {
-  background-color:cornflowerblue ;
+  background-color :cornflowerblue;
   padding:1rem ;
 }
 
