--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,17 +8,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header{
-  background-color:cornflowerblue ;
-  padding:1rem ;
-
-}
-
-header a {
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-}
 .monuments{
   display: flex;
   flex-wrap: wrap;
@@ -36,6 +26,9 @@ header a {
   
   
 } 
+main{
+  flex:1;
+}
 
 .monuments-info
 {
@@ -79,4 +72,7 @@ header a {
 .image-text
 {
   padding: 2rem ;
+}
+.img-large{
+  max-width:100%;
 }
