--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,37 @@
 body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.349);
+}
+image-header
+{
+  max-width: 100%;
+  height: auto;
+  background-color: black;
+  
+}
+.egypt-image 
+{
+  width: 100%;
+}
+body {
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,17 +40,6 @@ body {
   background-color: lightsteelblue;
 }
 
-header{
-  background-color:cornflowerblue ;
-  padding:1rem ;
-
-}
-
-header a {
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-}
 .monuments{
   display: flex;
   flex-wrap: wrap;
@@ -26,6 +47,7 @@ header a {
   border:1px #bca741 solid;
   margin:1rem;
 }
+
 
 .monuments img 
 {
@@ -35,9 +57,7 @@ header a {
   border-radius: 4px;
   padding: 5px; 
 } 
-main{
-  flex:1;
-}
+
 
 .monuments-info
 {
