--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font: 1.5rem "Nunito" , sans-serif;
+  min-height: 100%;
+  background-color: #475569;
+  background-image: radial-gradient(whitesmoke,#475569);
+  display:flex;
+  flex-direction: column;
 }
 
 code {
@@ -37,7 +44,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: lightsteelblue;
+  background-color: lightsteelblue; 
 }
 
 .monuments{
@@ -104,3 +111,76 @@ body {
 .img-large{
   max-width:100%;
 }
+/*original*/
+header,footer,main,nav{
+  display: grid;
+  place-content: center;
+  grid-template-columns: 100%;
+  text-align: center;
+}
+header,footer{
+  position: sticky;
+  background-color: #1E293B;
+  color: whitesmoke;
+}
+header{
+  top: 0;
+}
+nav{
+  background-color: #fff;
+  color: #000;
+  padding:0.5rem;
+  border-bottom: 2px solid #000;
+}
+main{
+  flex-wrap: 1;
+}
+footer{
+  bottom: 0;
+}
+     /*mediam screen*/
+     @media screen and (max-width:1200px) {
+    
+       img.image-header{
+        width: 80%;
+       }
+       div.image{
+        width: 20%;
+       }
+      }
+  /*ipad screen*/
+@media screen and (max-width:952px) {
+  img.image-header{
+    width: 80%;
+   }
+   div.image{
+    width: 40%;
+   }
+  }
+  /*mobile screen*/
+  @media screen and (max-width:578px) {
+    body{
+      font: 1.5em "Nunito", sans-serif;
+   }
+   ul.navbar-nav.ml-auto{
+    display: block;
+    position: relative;
+    padding: auto;
+   }
+   img.image-header{
+    width: 80%;
+   }
+   div.image{
+    width: 80%;
+   }
+  }
+
+
+
+
+
+
+
+
+ 
+  
