--- a/client/src/index.css
+++ b/client/src/index.css
@@ -110,6 +110,16 @@ body {
 }
 .img-large{
   max-width:100%;
+}/*language*/
+iframe{
+  display:none;
+}
+a.VIpgJd-ZVi9od-l4eHX-hSRGPd{
+  display:none;
+}
+.skiptranslate {
+  text-align: right;
+
 }
 /*original*/
 header,footer,main,nav{
@@ -131,6 +141,7 @@ nav{
   color: #000;
   padding:0.5rem;
   border-bottom: 2px solid #000;
+  top:0,
 }
 main{
   flex-wrap: 1;
