--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,8 @@ body {
 
   font: 1.5rem "Nunito" , sans-serif;
   min-height: 100%;
-  background-color: #475569;
-  background-image: radial-gradient(whitesmoke,#475569);
+  background-color :aqua;
+  
   display:flex;
   flex-direction: column;
 }
