--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,12 +114,22 @@ body {
 iframe{
   display:none;
 }
+
 a.VIpgJd-ZVi9od-l4eHX-hSRGPd{
   display:none;
 }
-.skiptranslate {
-  text-align: right;
-
+div.skiptranslate.goog-te-gadget {
+ position:absolute;
+ top: 65px;
+ right: 5px;
+}
+.goog-te-combo{
+  height: 21px;
+}
+.goog-te-gadget-icon{
+  position: absolute;
+  right: 20px;
+  top: 70px;
 }
 /*original*/
 header,footer,main,nav{
@@ -184,6 +194,16 @@ footer{
    div.image{
     width: 80%;
    }
+   .goog-te-combo{
+    height: 21px;
+    position: absolute;
+    right: -1px;
+    top: 81px;
+    font-size: 10px;
+  }
+  .goog-te-gadget-icon{
+    display: none;
+  }
   }
 
 
