--- a/client/src/index.css
+++ b/client/src/index.css
@@ -111,6 +111,12 @@ body {
 .img-large{
   max-width:100%;
 }
+/*language*/ 
+iframe { display: none; }
+a.VIpgJd-ZVi9od-l4eHX-hSRGPd{ display:none; }
+div.skiptranslate.goog-te-gadget { position:absolute; top: 65px; right: 5px; } 
+.goog-te-combo{ height: 21px; } 
+.goog-te-gadget-icon{ position: absolute; right: 20px; top: 70px; }
 /*original*/
 header,footer,main,nav{
   display: grid;
@@ -174,7 +180,10 @@ footer{
    div.image{
     width: 80%;
    }
+   goog-te-combo{ height: 21px; position: absolute; right: -1px; top: 37px; font-size: 10px; } 
+   .goog-te-gadget-icon{ display: none; } 
   }
+  
 
 
 
