--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,21 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font: 1.5rem "Nunito" , sans-serif;
+  font: 1.5rem 'Nunito', sans-serif;
   min-height: 100%;
   background-color: #475569;
-  background-image: radial-gradient(whitesmoke,#475569);
-  display:flex;
+  background-image: radial-gradient(whitesmoke, #475569);
+  display: flex;
   flex-direction: column;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 a {
@@ -26,15 +26,12 @@ a:hover {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.349);
 }
-image-header
-{
+image-header {
   max-width: 100%;
   height: auto;
   background-color: black;
-  
 }
-.egypt-image 
-{
+.egypt-image {
   width: 100%;
 }
 body {
@@ -44,152 +41,152 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: lightsteelblue; 
+  background-color: lightsteelblue;
 }
 
-.monuments{
+.monuments {
   display: flex;
   flex-wrap: wrap;
-  justify-content:center;
-  border:1px #bca741 solid;
-  margin:1rem;
+  justify-content: center;
+  border: 1px #bca741 solid;
+  margin: 1rem;
 }
 
-
-.monuments img 
-{
-  width:100%;
+.monuments img {
+  width: 100%;
   max-width: 400px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding: 5px; 
-} 
+  padding: 5px;
+}
 
-
-.monuments-info
-{
+.monuments-info {
   padding: 1rem;
 }
-.image-header
-{
+.image-header {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
   max-width: 100%;
   height: auto;
-}  
- 
-.image-header:hover
-{
+}
+
+.image-header:hover {
   transform: scaleX(-1);
-} 
-.images
-{  
+}
+.images {
   padding: 5rem 2rem;
-  background-color: var(--light-primary-color );
+  background-color: var(--light-primary-color);
   text-align: center;
-} 
-.image 
-{
+}
+.image {
   width: 15vw;
-  background-color:lightslategray;
-  margin: 1rem .5rem;
+  background-color: lightslategray;
+  margin: 1rem 0.5rem;
   display: inline-block;
-  transition: .2s;
-  border-radius: .3rem;
-} 
-.egypt-image 
-{
+  transition: 0.2s;
+  border-radius: 0.3rem;
+}
+.egypt-image {
   width: 100%;
-  border-radius: .3rem ;
-} 
-.image-text
-{
-  padding: 2rem ;
+  border-radius: 0.3rem;
 }
-.img-large{
-  max-width:100%;
+.image-text {
+  padding: 2rem;
 }
-/*language*/ 
-iframe { display: none; }
-a.VIpgJd-ZVi9od-l4eHX-hSRGPd{ display:none; }
-div.skiptranslate.goog-te-gadget { position:absolute; top: 120px; right: 60px; } 
-.goog-te-combo{ height: 21px; } 
+.img-large {
+  max-width: 100%;
+}
+/*language*/
+iframe {
+  display: none;
+}
+a.VIpgJd-ZVi9od-l4eHX-hSRGPd {
+  display: none;
+}
+div.skiptranslate.goog-te-gadget {
+  position: absolute;
+  top: 120px;
+  right: 60px;
+}
+.goog-te-combo {
+  height: 21px;
+}
 /*original*/
-header,footer,main,nav{
+header,
+footer,
+main,
+nav {
   display: grid;
   place-content: center;
   grid-template-columns: 100%;
   text-align: center;
 }
-header,footer{
+header,
+footer {
   position: sticky;
-  background-color: #1E293B;
+  background-color: #1e293b;
   color: whitesmoke;
 }
-header{
+header {
   top: 0;
 }
-nav{
+nav {
   background-color: #fff;
   color: #000;
-  padding:0.5rem;
+  padding: 0.5rem;
   border-bottom: 2px solid #000;
-  top:0,
+  top: 0;
 }
-main{
+main {
   flex-wrap: 1;
 }
-footer{
+footer {
   bottom: 0;
 }
-     /*mediam screen*/
-     @media screen and (max-width:1200px) {
-    
-       img.image-header{
-        width: 80%;
-       }
-       div.image{
-        width: 20%;
-       }
-      }
-  /*ipad screen*/
-@media screen and (max-width:952px) {
-  img.image-header{
+/*mediam screen*/
+@media screen and (max-width: 1200px) {
+  img.image-header {
     width: 80%;
-   }
-   div.image{
-    width: 40%;
-   }
   }
-  /*mobile screen*/
-  @media screen and (max-width:578px) {
-    body{
-      font: 1.5em "Nunito", sans-serif;
-   }
-   ul.navbar-nav.ml-auto{
+  div.image {
+    width: 20%;
+  }
+}
+/*ipad screen*/
+@media screen and (max-width: 952px) {
+  img.image-header {
+    width: 80%;
+  }
+  div.image {
+    width: 40%;
+  }
+}
+/*mobile screen*/
+@media screen and (max-width: 578px) {
+  body {
+    font: 1.5em 'Nunito', sans-serif;
+  }
+  ul.navbar-nav.ml-auto {
     display: block;
     position: relative;
     padding: auto;
-   }
-   img.image-header{
-    width: 80%;
-   }
-   div.image{
-    width: 80%;
-   }
-   goog-te-combo{ height: 21px; position: absolute; right: -1px; top: 37px; font-size: 10px; } 
-   .goog-te-gadget-icon{ display: none; } 
   }
-  
-
-
-
-
-
-
-
-
- 
-  
+  img.image-header {
+    width: 80%;
+  }
+  div.image {
+    width: 80%;
+  }
+  goog-te-combo {
+    height: 21px;
+    position: absolute;
+    right: -1px;
+    top: 37px;
+    font-size: 10px;
+  }
+  .goog-te-gadget-icon {
+    display: none;
+  }
+}
