--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,11 +8,12 @@ body {
 
   font: 1.5rem 'Nunito', sans-serif;
   min-height: 100%;
-  background-color: #475569;
-  background-image: radial-gradient(whitesmoke, #475569);
+  background-color: #3A547B;
+  background-image: radial-gradient(whitesmoke, #3A547B);
   display: flex;
   flex-direction: column;
-}
+} 
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -33,7 +34,28 @@ image-header {
 }
 .egypt-image {
   width: 100%;
-}
+} 
+.text{
+  margin: auto;
+  
+  border: 3px solid 3A547B;
+  padding: 10px;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+} 
+.choose
+{
+  margin: auto;
+  text-align: center;
+
+  width: 60%;
+  
+
+} 
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
