--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,12 +5,35 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   font: 1.5rem 'Nunito', sans-serif;
   min-height: 100%;
-  background-color: #475569;
-  background-image: radial-gradient(whitesmoke, #475569);
+  
+  background-image: url("b7.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
+  backdrop-filter: brightness(60%);
+
+
+}
+
+
+.box1 {
+  background-color:#2e2b2b;
+  color: #fff;
+  width: fit-content;
+  font-size: 50px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 50px;
+  margin-top: 50px;
+  margin-left: 1px;
+
 }
 
 p.italic {
@@ -40,16 +62,6 @@ image-header {
 .egypt-image {
   width: 100%;
 }
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: lightsteelblue;
-}
-
 .monuments {
   display: flex;
   flex-wrap: wrap;
@@ -57,7 +69,6 @@ body {
   border: 1px #bca741 solid;
   margin: 1rem;
 }
-
 .monuments img {
   width: 100%;
   max-width: 400px;
@@ -65,7 +76,6 @@ body {
   border-radius: 4px;
   padding: 5px;
 }
-
 .monuments-info {
   padding: 1rem;
 }
@@ -77,6 +87,7 @@ body {
   max-width: 100%;
   height: auto;
 }
+
 .image-header:hover {
   transform: scaleX(-1);
 }
@@ -131,6 +142,7 @@ nav {
 header,
 footer {
   position: sticky;
+  
   background-color: #be9d44a6;
   color: rgb(255, 251, 251);
 }
@@ -195,22 +207,21 @@ footer {
     display: none;
   }
 }
-
-.more {
-  overflow: hidden;
-  width: 1000px;
-  padding: 20px;
-  margin: 20px auto;
-}
-.more img {
-  float: left;
-  width: 25%;
-  padding: 20px;
-}
-.A1,
-.A2,
-.A3 {
-  width: 400px;
+.more { 
+  overflow: hidden; 
+  width: 800px; 
+  padding: 20px; 
+  margin: 20px auto; 
+} 
+.more img { 
+  float: left; 
+  width: 25%; 
+  padding: 20px; 
+} 
+.A1, 
+.A2, 
+.A3 { 
+  width: 400px; 
   height: 200px; 
 } 
 .col-lg-7 { 
@@ -218,3 +229,229 @@ footer {
   justify-content: end; 
   width: 100%; 
 }
+
+body{
+  padding: 0;
+  margin: 0;
+  background-color: floralwhite;
+}
+
+h2{
+  background-color:#2e2b2b;
+  color: #fff;
+  width: fit-content;
+  font-size: 50px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 50px;
+  margin-top: 50px;
+  margin-left: 350px;
+
+}
+
+.slider-frame{
+  overflow:hidden;
+  height: 800px;
+  width: 1200px;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+/*---------- SLIDE ANIMATION --------------*/
+
+
+@keyframes slide_animation{
+      0% {left:0px;}
+      10% {left:0px;}
+      20% {left:1200px;}
+      30% {left:1200px;}
+      40% {left: 2400px;}
+      50% {left: 2400px;}
+      60% {left: 1200px;}
+      70% {left: 1200px;}
+      80% {left: 0px;}
+      90% {left: 0px;}
+      100% {left:0px;}
+
+
+
+}
+	  @-webkit-keyframes slide_animation{
+      0% {left:0px;}
+      10% {left:0px;}
+      20% {left:1200px;}
+      30% {left:1200px;}
+      40% {left: 2400px;}
+      50% {left: 2400px;}
+      60% {left: 1200px;}
+      70% {left: 1200px;}
+      80% {left: 0px;}
+      90% {left: 0px;}
+      100% {left:0px;}
+  }
+
+.slide-images{
+  width: 3600px;
+  height: 800px;
+  margin: 0 0 0 -2400px;
+  position: relative;
+  -webkit-animation-name: slide_animation;
+  animation-name: slide_animation;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+  -webkit-animation-play-state: running;
+  animation-play-state: running;
+}
+
+.img-container{
+  height: 800px;
+  width: 1100px;
+  position: relative;
+  float: left;
+}  body{
+  padding: 0;
+  margin: 0;
+  background-color: floralwhite;
+}
+
+h1{
+  margin-top: 50px;
+  margin-left: 300px;
+  background:fixed;
+  background-color: #ddd;
+  font-size: 60px;
+  font-family: 'Karla', sans-serif;
+  font-weight: lighter;
+}
+
+.slider-frame{
+  overflow: hidden;
+  height: 800px;
+  width: 1200px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+/*---------- SLIDE ANIMATION --------------*/
+
+
+@keyframes slide_animation{
+  0% {left:0px;}
+  10% {left:0px;}
+  20% {left:1200px;}
+  30% {left:1200px;}
+  40% {left: 2400px;}
+  50% {left: 2400px;}
+  60% {left: 1200px;}
+  70% {left: 1200px;}
+  80% {left: 0px;}
+  90% {left: 0px;}
+  100% {left:0px;}
+}
+
+@-webkit-keyframes slide_animation{
+  0% {left:0px;}
+  10% {left:0px;}
+  20% {left:1200px;}
+  30% {left:1200px;}
+  40% {left: 2400px;}
+  50% {left: 2400px;}
+  60% {left: 1200px;}
+  70% {left: 1200px;}
+  80% {left: 0px;}
+  90% {left: 0px;}
+  100% {left:0px;}
+}
+
+.slide-images{
+  width: 3600px;
+  height: 800px;
+  margin: 0 0 0 -2400px;
+  position: relative;
+  -webkit-animation-name: slide_animation;
+  animation-name: slide_animation;
+  -webkit-animation-duration: 20s;
+  animation-duration: 20s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+  -webkit-animation-play-state: running;
+  animation-play-state: running;
+}
+
+.img-container{
+  height: 800px;
+  width: 1200px;
+  position: relative;
+  float: left;
+}
+
+.textOverImage{
+    width:60%;
+    height:60%;
+    display:inline-block;
+    background-size:cover;
+    border-radius:4px;
+    margin:4px;
+    position:relative;
+    cursor:pointer;
+    overflow:hidden;
+  }
+
+  .textOverImage > input{
+    display:none;
+  }
+
+  .textOverImage > div,.textOverImage > h2{
+    position:absolute;
+    background-color:rgba(85, 75, 75, 0.8);
+    bottom:20px;
+    left:4px;
+    right:4px;
+    border-radius:4px;
+    padding:8px;
+    overflow:hidden;
+    opacity:0;
+    transition:.3s;
+  }
+
+  .textOverImage:hover > h2,.textOverImage > input:checked + h2 + div{
+    bottom:4px;
+    opacity:1;
+  }
+
+  .textOverImage > input:checked + h2{
+    bottom:-20px;
+    opacity:0;
+  }
+
+  .textOverImage > h2{
+    margin:0;
+  }
+  * {
+    box-sizing: border-box;
+
+  }
+
+  .column {
+    float: left;
+    width: 100%;
+    height: 100%;
+  }
+
+  /* Clearfix (clear floats) */
+  .row::after {
+    width: fit-content;
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+
+
