--- a/client/src/index.css
+++ b/client/src/index.css
@@ -120,7 +120,7 @@ image-header {
   font-size: 3.5rem;
   text-align: center;
 }
-swiper-slide {
+.swiper-slide {
   width: 20rem;
   height: 10rem;
   position: relative;
