--- a/client/src/index.css
+++ b/client/src/index.css
@@ -580,3 +580,18 @@ h1 {
   font-size: 1.5em;
   background: rgba(0, 0, 0, 0.08);
 }
+/*language*/ 
+.iframe { 
+  display: none;
+ }
+.a.VIpgJd-ZVi9od-l4eHX-hSRGPd{
+   display:none; 
+  }
+div.skiptranslate.goog-te-gadget {
+   position:absolute;
+    top: 120px; 
+    right: 60px;
+   } 
+.goog-te-combo{
+   height: 21px;
+   } 
