--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font: 1.5rem 'Nunito', sans-serif;
-  min-height: 100%;
+  /* font: 1.5rem 'Nunito', sans-serif;
+  min-height: 100%; */
 
   background-image: url('b7.jpg');
   background-repeat: no-repeat;
@@ -273,7 +273,7 @@ h2 {
   width: 1200px;
   margin-left: 10px;
   margin-top: 20px;
-}
+} 
 
 /*---------- SLIDE ANIMATION --------------*/
 
@@ -387,16 +387,16 @@ h1 {
   font-weight: lighter;
 }
 
-.slider-frame {
+/* .slider-frame {
   overflow: hidden;
   height: 800px;
   width: 1200px;
   margin-left: 20px;
   margin-top: 20px;
-}
+} */
 
 /*---------- SLIDE ANIMATION --------------*/
-
+/* 
 @keyframes slide_animation {
   0% {
     left: 0px;
@@ -467,7 +467,7 @@ h1 {
   100% {
     left: 0px;
   }
-}
+} */
 
 .slide-images {
   width: 3600px;
