--- a/client/src/index.css
+++ b/client/src/index.css
@@ -144,59 +144,6 @@ footer {
   bottom: 0;
   width: 100%;
 }
-/*mediam screen*/
-@media screen and (max-width: 1200px) {
-  img.image-header {
-    width: 80%;
-  }
-  div.image {
-    width: 20%;
-  }
-}
-/*ipad screen*/
-@media screen and (max-width: 952px) {
-  img.image-header {
-    width: 80%;
-  }
-  div.image {
-    width: 40%;
-  }
-}
-/*mobile screen*/
-@media screen and (max-width: 578px) {
-  body {
-    font: 1.5em 'Nunito', sans-serif;
-  }
-  ul.navbar-nav.ml-auto {
-    display: block;
-    position: relative;
-    padding: auto;
-  }
-  img.image-header {
-    width: 80%;
-  }
-  div.image {
-    width: 80%;
-  }
-  .goog-te-combo {
-    height: 21px;
-    position: absolute;
-    right: -1px;
-    top: 37px;
-    font-size: 10px;
-  }
-  .goog-te-gadget-icon {
-    display: none;
-  } 
-  .box1{
-    font-size: 37px;
-  } 
-  .egypt
-  {
-    width: 100%;
-  }
-}
-
 .col-lg-7 {
   display: flex;
   justify-content: center;
@@ -545,4 +492,68 @@ iframe {
 }
 #languageMenu {
   display: none;
+}
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+  div.image{
+    width: 80%;
+  }
+  #txtFld{
+    width: 90%;
+  }
+  #speakerMenu{
+    width: 295px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+  .image{
+    width: 23vw;
+  }
+  #txtFld{
+    width: 90%;
+  }
 }
